--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,10 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+@import "./_variable";
 * {
     margin: 0 ;
     padding: 0;
+    background-color: $black;
+    color: white;
 }
 
 input:focus{
