--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,9 +1,18 @@
 @import "./_variable";
+// Poppins
+
+
 * {
     margin: 0 ;
     padding: 0;
-    background-color: $black;
-    color: white;
+}
+
+body{
+    background-color: white;
+    color: black;
+    // background-image: url(https://img.freepik.com/free-photo/old-black-background-grunge-texture-dark-wallpaper-blackboard-chalkboard-room-wall_1258-28312.jpg?w=900&t=st=1676322714~exp=1676323314~hmac=f451011b14ba71b500420c9e91585aa2a41d90c720504e94b64463623d84b6c3);
+    // background-size: cover;
+    // background-repeat: no-repeat;
 }
 
 input:focus{
