--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -68,11 +68,15 @@
         gap: 0.5rem;
         align-items: center;
         justify-content: center;
+        width: 100%;
 
         .product_name{
             background-color: rgba(35, 35, 41, 0.1);
             padding: 10px;
             border-radius: 5px;
+            font-size: 1rem;
+            width: 90%;
+            height: 50px;
         }
 
         .price{
