--- a/client/src/pages/Dashboard/Dashboard.scss
+++ b/client/src/pages/Dashboard/Dashboard.scss
@@ -5,86 +5,43 @@
     margin: 0 auto;
     padding: 1rem 0;
 
-    h2{
-        font-size: 1.5rem;
+    .h2 {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 1000px;
+        margin: 0 auto;
+        background-color: $violet;
+        padding: 1rem 1rem;
+        color: white;
+
+        span{
+            color: white;
+            font-family: $alata;
+        }
+
+        h2{
+            font-size: 1.5rem;
+            color: white;
+            font-family: $alata;
+        }
     }
 
-    .dash-flex{
+    .dash-flex {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
+        max-width: 1000px;
+        margin: 0 auto;
 
-        .left{
-            width: 640px;
-            padding: 1rem;
-            width: 50%;
-
-            form{
-                max-width: 100%;
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-                background-color: rgb(243, 243, 243);
-                padding: 2rem;
-                margin: 0 0.5rem;
-
-                h3{
-                    // background-color: yellow;
-                    padding: 0.5rem 0;
-                }
-
-                div{
-                    display: flex;
-
-                    label{
-                        width: 100px;
-                        font-size: 1rem;
-                    }
-
-                    input, select, textarea {
-                        width: 100%;
-                    }
-
-                    textarea{
-                        cursor: pointer;
-                        height: 60px;
-                        padding: 0 5px;
-                    }
-
-                    input{
-                        height: 30px;
-                        cursor: pointer;
-                        padding: 0 5px;
-                    }
-
-                    .colors{
-                        display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-                        margin: 0.4rem 0;
-
-                        label{
-                            display: flex;
-                            align-items: center;
-                            justify-content: flex-start;
-
-                            input{
-                                height: 16px;
-                                cursor: pointer;
-                            }
-                        }
-                    }
-                }
-
-                button{
-                    background-color: green;
-                    color: white;
-                    padding: 5px 10px;
-                    cursor: pointer;
-                }
-
-            }
+        .outlet{
+            max-width: 100%;
         }
+
+
+
+
     }
 }
 
@@ -93,7 +50,7 @@
     display: flex;
     align-items: center;
 
-    form{
+    form {
         width: 300px;
         margin: 1rem auto;
         display: flex;
@@ -102,23 +59,23 @@
         background-color: rgb(218, 218, 218);
         padding: 2rem;
 
-        h1{
+        h1 {
             font-size: 2rem;
         }
 
-        input{
+        input {
             width: 100%;
             height: 30px;
         }
 
-        button{
+        button {
             cursor: pointer;
             padding: 5px 0;
             background-color: rgb(11, 125, 179);
             color: white;
         }
 
-        .error{
+        .error {
             background-color: red;
             color: white;
             padding: 5px 10px;
