--- a/client/src/pages/Dashboard/CreateProduct/CreateProduct.scss
+++ b/client/src/pages/Dashboard/CreateProduct/CreateProduct.scss
@@ -22,6 +22,10 @@
             font-family: $alata;
         }
 
+        p{
+            color: #492aad;
+        }
+
         .dash_form {
             display: flex;
             gap: 0.5rem;
