--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -5,8 +5,45 @@
     color: black;
 }
 
+body{
+    background-color: white;
+    color: black;
+    // background-image: url(https://img.freepik.com/free-photo/old-black-background-grunge-texture-dark-wallpaper-blackboard-chalkboard-room-wall_1258-28312.jpg?w=900&t=st=1676322714~exp=1676323314~hmac=f451011b14ba71b500420c9e91585aa2a41d90c720504e94b64463623d84b6c3);
+    // background-size: cover;
+    // background-repeat: no-repeat;
+}
+
+button{
+    border: none;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+Link{
+    color: inherit;
+    font-family: inherit;
+}
+
+// Inputs
+
 input:focus{
     outline: none;
-    border: none;
+    // border: none;
     background-color: white;
+}
+
+input[type="checkbox"]:checked {
+    background-color: #691ba1 !important;
+    color: white !important;
+    border-color: #691ba1 !important;
+  }
+  
+
+// Utility
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
 }
