--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,33 +2,61 @@
 
 
 * {
-    margin: 0 ;
-    padding: 0;}
-body{
+    margin: 0;
+    padding: 0;
+}
+
+body {
     background-color: white;
     color: black;
     // background-image: url(https://img.freepik.com/free-photo/old-black-background-grunge-texture-dark-wallpaper-blackboard-chalkboard-room-wall_1258-28312.jpg?w=900&t=st=1676322714~exp=1676323314~hmac=f451011b14ba71b500420c9e91585aa2a41d90c720504e94b64463623d84b6c3);
     // background-size: cover;
     // background-repeat: no-repeat;
+    font-family: $mont;
 }
 
-button{
+p {
+    font-size: 1rem;
+    font-family: $poppins;
+}
+
+h1,
+h2,
+h3,
+h4,
+h6 {
+    font-family: $alata;
+}
+
+h3 {
+    padding: 1rem 0;
+    font-size: 2rem;
+}
+
+// constants
+.show_more {
+    max-width: 200px;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+button {
     border: none;
 }
 
-a{
+a {
     text-decoration: none;
     color: inherit;
 }
 
-Link{
+Link {
     color: inherit;
     font-family: inherit;
 }
 
 // Inputs
 
-input:focus{
+input:focus {
     outline: none;
     // border: none;
     background-color: white;
@@ -38,11 +66,11 @@ input[type="checkbox"]:checked {
     background-color: #691ba1 !important;
     color: white !important;
     border-color: #691ba1 !important;
-  }
-  
+}
+
 
 // Utility
-.container{
+.container {
     max-width: 1200px;
     margin: 0 auto;
 }
