--- a/client/src/pages/pages.scss
+++ b/client/src/pages/pages.scss
@@ -1,13 +1,20 @@
 @import '../_variable';
 
-.home{
+.home {
     max-width: 1280px;
     margin: 0 auto;
 
-    .products{
+
+    .products {
         margin: 1rem 0;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         gap: 3rem;
+    }
+
+    .link-to-products {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
