--- a/client/src/pages/SingleProduct/SingleProduct.scss
+++ b/client/src/pages/SingleProduct/SingleProduct.scss
@@ -13,12 +13,12 @@
     .content {
         height: 100%;
         display: flex;
+        gap: 1rem;
         justify-content: flex-end;
         align-items: center;
         flex-direction: column-reverse;
         max-width: calc(100% - 20px);
         margin: 0 auto;
-        position: relative;
 
         @include md {
             flex-direction: row;
@@ -26,42 +26,22 @@
         }
 
         .banner-img {
-            position: relative;
-            z-index: 9;
-            width: 200px;
+            height: 400px;
+            width: 50%;
+            object-fit: contain;
             margin-bottom: 20px;
 
-            @include md {
-                width: 500px;
-                margin-right: 60px;
-                margin-top: 50px;
-                margin-bottom: 0;
-            }
-
-            @include xxl {
-                width: 600px;
-                margin-right: 0;
-                margin-top: 0;
-            }
         }
 
         .text-content {
+            width: 50%;
             color: white;
-            text-align: center;
+            text-align: left;
             display: flex;
+            // gap: 1rem;
             flex-direction: column;
             align-items: center;
 
-            @include md {
-                position: absolute;
-                left: 50px;
-                top: 50%;
-                transform: translateY(-50%);
-            }
-
-            @include xxl {
-                left: 0;
-            }
 
             h4 {
                 font-size: 3rem;
@@ -76,14 +56,14 @@
             }
 
             p {
-                max-width: 300px;
+                // max-width: 300px;
                 font-size: 14px;
                 line-height: 20px;
                 margin-bottom: 20px;
 
                 @include md {
-                    max-width: 500px;
-                    font-size: 18px;
+                    // max-width: 500px;
+                    font-size: 1rem;
                     line-height: 24px;
                     margin-bottom: 40px;
                 }
