--- a/client/src/section/Footer/Footer.scss
+++ b/client/src/section/Footer/Footer.scss
@@ -3,6 +3,8 @@
 
 .footer {
     width: 100%;
+    border-top: 2px solid #f3f3f3;
+    margin: 1rem;
 
     .footer-content {
         padding: 50px 20px;
